# cli_chat

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: cli.rs  comms.rs  helpers.rs  lib.rs  main.rs  message.rs  storage.rs
client/src/cli/: app.rs  email.rs  mod.rs  root.rs
client/src/storage/: conn_map.rs  mod.rs  storage.rs  storage_methods.rs  storage_tests.rs
client/tests/: client_tests.rs
protocol/: Cargo.toml
protocol/src/: chat_message.rs  connect.rs  field_lens.rs  lib.rs  packet.rs  signup.rs  verify.rs
server/src/: main.rs
